--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "commonjs": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "amd": true
     },
     "extends": [
         "airbnb-base"
@@ -11,6 +12,6 @@
         "ecmaVersion": 12
     },
     "rules" : {
-      "no-console": "off"
+      "no-console": "off",
     }
 }
