--- a/app/package.json
+++ b/app/package.json
@@ -4,18 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "nodemon ./start.js"
+    "tailwind:css": "postcss public/css/tailwind.css -o public/css/style.css",
+    "watch": "nodemon -e ejs,js,css,html,jpg,png,scss app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "10.0.4",
     "body-parser": "1.19.0",
     "dotenv": "8.2.0",
     "ejs": "3.1.5",
     "express": "4.17.1",
     "express-validator": "6.7.0",
-    "pg": "8.5.1"
+    "pg": "8.5.1",
+    "postcss": "8.1.14",
+    "postcss-cli": "8.3.0",
+    "tailwindcss": "2.0.1",
+    "morgan": "~1.9.1",
+    "debug": "~2.6.9",
+    "cookie-parser": "~1.4.4",
+    "async": "3.2.0"
   },
   "devDependencies": {
     "eslint": "7.14.0",
