--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
       - database.env # configure postgres
     ports:
       - 8001:5432
+    networks:
+      mynet:
+        ipv4_address: "172.16.238.11"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
   
@@ -17,8 +20,19 @@ services:
       - ./app:/usr/src/app
     ports:
       - 8002:3000
+    networks: 
+      mynet:
+        ipv4_address: "172.16.238.10"
     command: >
       bash -c "cd /usr/src/app
       && npm run watch"
     links:
       - postgres
+
+  networks: 
+  mynet:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+      - subnet: 172.16.238.0/24
