--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "express": "4.17.1",
     "express-validator": "6.7.0",
     "morgan": "~1.9.1",
+    "node-fetch": "2.6.1",
     "nunjucks": "3.2.2",
     "pg": "8.5.1",
     "postcss": "8.1.14",
