--- a/app/package.json
+++ b/app/package.json
@@ -14,11 +14,13 @@
     "async": "3.2.0",
     "autoprefixer": "10.0.4",
     "body-parser": "1.19.0",
+    "connect-flash": "0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "8.2.0",
     "ejs": "3.1.5",
     "express": "4.17.1",
+    "express-session": "1.17.1",
     "express-validator": "6.7.0",
     "morgan": "~1.9.1",
     "node-fetch": "2.6.1",
@@ -26,7 +28,8 @@
     "pg": "8.5.1",
     "postcss": "8.1.14",
     "postcss-cli": "8.3.0",
-    "tailwindcss": "2.0.1"
+    "tailwindcss": "2.0.1",
+    "unsplash-js": "7.0.3"
   },
   "devDependencies": {
     "eslint": "7.14.0",
